--- a/BakkesModInjectorC++/BakkesModInjectorCpp.ui
+++ b/BakkesModInjectorC++/BakkesModInjectorCpp.ui
@@ -27,6 +27,19 @@
      <string>TextLabel</string>
     </property>
    </widget>
+   <widget class="QProgressBar" name="progressBar">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>10</y>
+      <width>211</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="value">
+     <number>24</number>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
