--- a/BakkesModInjectorC++/BakkesModInjectorCpp.ui
+++ b/BakkesModInjectorC++/BakkesModInjectorCpp.ui
@@ -153,7 +153,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Launch with Rocket League</string>
+    <string>Launch RL, Close with RL</string>
    </property>
   </action>
   <action name="actionHide_when_minimized">
